[project]
name = "secret-redaction-middleware"
version = "1.0.0"
description = "Middleware for detecting and redacting secrets in API requests"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0.0",
    "httpx>=0.25.0",
    "sseclient-py>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"